--- a/Frontend/mein-angular-projekt/src/app/app.html
+++ b/Frontend/mein-angular-projekt/src/app/app.html
@@ -1,1 +1,4 @@
-<app-movie-list></app-movie-list>
+<!--<app-register></app-register>-->
+<app-navbar-component [isLoggedIn]="false" [username]="null"></app-navbar-component>
+<!--<app-movie-list></app-movie-list>-->
+<router-outlet></router-outlet>
