--- a/Frontend/mein-angular-projekt/src/app/app.html
+++ b/Frontend/mein-angular-projekt/src/app/app.html
@@ -1,4 +1,4 @@
 <!--<app-register></app-register>-->
-<app-navbar-component [isLoggedIn]="false" [username]="null"></app-navbar-component>
+<app-navbar-component></app-navbar-component>
 <!--<app-movie-list></app-movie-list>-->
 <router-outlet></router-outlet>
